// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcAlert should display only with a title and the type given 1`] = `
<div
  class="ec-alert ec-alert--info ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-info"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Random Title
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`EcAlert should display with a button with the text given in the buttonText 1`] = `
<div
  class="ec-alert ec-alert--info ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-info"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <!---->
  </div>
   
  <button
    class="ec-btn ec-btn--sm ec-btn--outline ec-btn--rounded ec-alert__button ec-btn--primary-reverse"
  >
    Button text
  </button>
</div>
`;

exports[`EcAlert should display with a subtitle given 1`] = `
<div
  class="ec-alert ec-alert--info ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon ec-alert__icon--alert-has-subtitle"
  >
    <use
      xlink:href="#ec-simple-info"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <div
      class="ec-alert__subtitle"
    >
      Subtitle example
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`EcAlert should render the dismiss icon when is given the prop dismissable 1`] = `
<div
  class="ec-alert ec-alert--info ec-alert--is-responsive"
>
  <a
    class="ec-alert__dismiss-icon ec-alert__dismiss-icon--info"
    href="#"
  >
    <svg
      class="ec-icon"
      height="16"
      width="16"
    >
      <use
        xlink:href="#ec-simple-close"
      />
    </svg>
  </a>
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-info"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`EcAlert should render with the slot given 1`] = `
<div
  class="ec-alert ec-alert--info ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon ec-alert__icon--alert-has-subtitle"
  >
    <use
      xlink:href="#ec-simple-info"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div>
      Custom: Title example - Subtitle example
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`EcAlert should use the given type for the alert type and for the button too 1`] = `
<div
  class="ec-alert ec-alert--error ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <!---->
  </div>
   
  <button
    class="ec-btn ec-btn--sm ec-btn--outline ec-btn--rounded ec-alert__button ec-btn--error-reverse"
  >
    Warning button
  </button>
</div>
`;

exports[`EcAlert should use the type "error" 1`] = `
<div
  class="ec-alert ec-alert--error ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`EcAlert should use the type "info" 1`] = `
<div
  class="ec-alert ec-alert--info ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-info"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`EcAlert should use the type "success" 1`] = `
<div
  class="ec-alert ec-alert--success ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`EcAlert should use the type "warning" 1`] = `
<div
  class="ec-alert ec-alert--warning ec-alert--is-responsive"
>
  <!---->
   
  <svg
    class="ec-alert__icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
   
  <div
    class="ec-alert__content"
  >
    <div
      class="ec-alert__title"
    >
      Title example
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;
